--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -30,7 +30,7 @@ test:
   requires:
     - pip
   commands:
-    - wheel
+    - pip check
 
 about:
   home: https://github.com/pyserial/pyserial
@@ -42,8 +42,7 @@ about:
     for Python running on Windows, OSX, Linux, BSD (possibly any POSIX
     compliant system) and IronPython. The module named "serial" automatically
     selects the appropriate backend.
-  doc_url: https://pyserial.readthedocs.io/en/latest/
-  doc_source_url: https://github.com/pyserial/pyserial/blob/master/documentation/index.rst
+  doc_url: https://pyserial.readthedocs.io
   dev_url: https://github.com/pyserial/pyserial
 
 extra:
